[gd_scene load_steps=4 format=1]

[ext_resource path="res://Vaquita/vaq_HUD/HUD_Root(vaq).gd" type="Script" id=1]
[ext_resource path="res://Leopard/LeopMain/SanFranciscoDisplay-Regular.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Leopard/Obstacles/laserRed03.png" type="Texture" id=3]

[node name="HUD_Root(vaq)" type="Node"]

script/script = ExtResource( 1 )

[node name="Label_Score" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 152.0
margin/top = 228.0
margin/right = 335.0
margin/bottom = 282.0
custom_fonts/font = ExtResource( 2 )
text = "SCORE"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_Health" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 151.0
margin/top = 111.0
margin/right = 365.0
margin/bottom = 165.0
custom_fonts/font = ExtResource( 2 )
text = "HEALTH"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="Label_Health"]

transform/pos = Vector2( 243, 23 )
transform/scale = Vector2( 2, 1.2 )
texture = ExtResource( 3 )

[node name="Sprite 2" type="Sprite" parent="Label_Health"]

transform/pos = Vector2( 273, 23 )
transform/scale = Vector2( 2, 1.2 )
texture = ExtResource( 3 )

[node name="Sprite 3" type="Sprite" parent="Label_Health"]

transform/pos = Vector2( 303, 23 )
transform/scale = Vector2( 2, 1.2 )
texture = ExtResource( 3 )

[node name="Sprite 4" type="Sprite" parent="Label_Health"]

transform/pos = Vector2( 333, 23 )
transform/scale = Vector2( 2, 1.2 )
texture = ExtResource( 3 )

[node name="Label_Menu" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 648.0
margin/top = 419.0
margin/right = 1252.0
margin/bottom = 701.0
custom_fonts/font = ExtResource( 2 )
text = "Vaquita	

Press Enter to Play"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_Game_Over" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1375.0
margin/top = 200.0
margin/right = 1920.0
margin/bottom = 868.0
custom_fonts/font = ExtResource( 2 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


